// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Character Count matches snapshot (via server): client 1`] = `
<div>
  <div
    class="nhsuk-form-group nhsuk-character-count"
    data-maxlength="200"
    data-module="nhsuk-character-count"
    data-nhsuk-character-count-init=""
  >
    <h1
      class="nhsuk-label-wrapper"
    >
      <label
        class="nhsuk-label nhsuk-label--l"
        for="more-detail"
        id="more-detail--label"
      >
        Can you provide more detail?
      </label>
    </h1>
    <div
      class="nhsuk-hint"
      id="more-detail--hint"
    >
      Do not include personal information like your name, date of birth or NHS number
    </div>
    <textarea
      aria-describedby="more-detail-info more-detail--hint"
      class="nhsuk-textarea nhsuk-js-character-count"
      id="more-detail"
      name="more-detail"
      rows="5"
    />
    <div
      class="nhsuk-hint nhsuk-character-count__message nhsuk-u-visually-hidden"
      id="more-detail-info"
    >
      You can enter up to 200 characters
    </div>
    <div
      aria-hidden="true"
      class="nhsuk-hint nhsuk-character-count__message nhsuk-character-count__status"
    >
      You have 200 characters remaining
    </div>
    <div
      aria-live="polite"
      class="nhsuk-character-count__sr-status nhsuk-u-visually-hidden"
    >
      You have 200 characters remaining
    </div>
  </div>
</div>
`;

exports[`Character Count matches snapshot (via server): server 1`] = `
<div>
  <div
    class="nhsuk-form-group nhsuk-character-count"
    data-maxlength="200"
    data-module="nhsuk-character-count"
  >
    <h1
      class="nhsuk-label-wrapper"
    >
      <label
        class="nhsuk-label nhsuk-label--l"
        for="more-detail"
        id="more-detail--label"
      >
        Can you provide more detail?
      </label>
    </h1>
    <div
      class="nhsuk-hint"
      id="more-detail--hint"
    >
      Do not include personal information like your name, date of birth or NHS number
    </div>
    <textarea
      aria-describedby="more-detail-info more-detail--hint"
      class="nhsuk-textarea nhsuk-js-character-count"
      id="more-detail"
      name="more-detail"
      rows="5"
    />
    <div
      class="nhsuk-hint nhsuk-character-count__message"
      id="more-detail-info"
    >
      You can enter up to 200 characters
    </div>
  </div>
</div>
`;

exports[`Character Count matches snapshot 1`] = `
<div>
  <div
    class="nhsuk-form-group nhsuk-character-count"
    data-maxlength="200"
    data-module="nhsuk-character-count"
    data-nhsuk-character-count-init=""
  >
    <h1
      class="nhsuk-label-wrapper"
    >
      <label
        class="nhsuk-label nhsuk-label--l"
        for="more-detail"
        id="more-detail--label"
      >
        Can you provide more detail?
      </label>
    </h1>
    <div
      class="nhsuk-hint"
      id="more-detail--hint"
    >
      Do not include personal information like your name, date of birth or NHS number
    </div>
    <textarea
      aria-describedby="more-detail-info more-detail--hint"
      class="nhsuk-textarea nhsuk-js-character-count"
      id="more-detail"
      name="more-detail"
      rows="5"
    />
    <div
      class="nhsuk-hint nhsuk-character-count__message nhsuk-u-visually-hidden"
      id="more-detail-info"
    >
      You can enter up to 200 characters
    </div>
    <div
      aria-hidden="true"
      class="nhsuk-hint nhsuk-character-count__message nhsuk-character-count__status"
    >
      You have 200 characters remaining
    </div>
    <div
      aria-live="polite"
      class="nhsuk-character-count__sr-status nhsuk-u-visually-hidden"
    >
      You have 200 characters remaining
    </div>
  </div>
</div>
`;
